--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,19 @@
-spring.application.name=DiplomFromZero-0.1
+spring.application.name=HomeAcc
 
-spring.datasource.url=jdbc:h2:mem:diplom
+spring.datasource.url=jdbc:mysql://localhost:3306/homeacc
+spring.datasource.username=root
+spring.datasource.password=pass123!
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 #spring.mail.host=smtp.gmail.com
 #spring.mail.port=587
-#spring.mail.username=dolgih.yv@gmail.com
-#spring.mail.password=2971yekD!@#
+#spring.mail.username=xxxxxxxx@gmail.com
+#spring.mail.password=
 #spring.mail.protocol=smtp
 #spring.mail.properties.mail.smtp.auth=true
 #mail.debug=true
-
-#server.port=8888
